[package]
name = "egui-snow"
version = "0.34.0"
edition = "2021"
authors = ["laVashik <me@lavashik.dev>"]
description = "A lightweight, zero-layout-impact snowfall effect widget for egui."
license = "MIT"
repository = "https://github.com/LaVashikk/egui-snow"
homepage = "https://lavashikk.github.io/egui-snow/"
documentation = "https://docs.rs/egui-snow"
readme = "README.md"
keywords = ["egui", "gui", "gamedev", "widgets", "particles"]
categories = ["gui", "visualization"]
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
egui = { version = "0.34" }
rand = "0.9.2"

[dev-dependencies]
# eframe = "0.34"
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
